# Zenthril

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json
.devcontainer/: devcontainer.json  start.sh
.github/workflows/: ci.yml
.kiro/specs/discord-alternative/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .golangci.yml  Dockerfile  go.mod  go.sum  main.go
backend/auth/: handler.go  jwt.go  jwt_test.go  middleware.go  password.go  password_test.go  service.go
backend/config/: config.go  config_test.go
backend/db/: db.go
backend/friends/: handler.go  service.go
backend/guild/: handler.go  service.go
backend/hub/: hub.go
backend/message/: handler.go  service.go
backend/migrations/: 001_initial_schema.sql  002_global_bans.sql  003_friends.sql
backend/models/: guild.go  message.go  user.go
backend/security/: extract_ip_test.go  guard.go
backend/spam/: guard.go
client/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src/api/: index.ts
client/src/components/: AuthScreen.tsx  ChannelList.tsx  ChatView.tsx  GifPicker.tsx  GuildList.tsx  MainLayout.tsx  MessageInput.tsx  MessageItem.tsx  MoodAvatar.tsx  NotificationsPanel.tsx  ProfileModal.tsx  ThemeSettings.tsx  UserProfileCard.tsx  UserSearch.tsx
client/src/crypto/: crypto.test.ts  index.ts  test-setup.ts
docs/: DEPLOYMENT.md  PRIVACY.md
(+11 files in other folders)
