[package]
name = "veltrix"
version = "0.1.0"
description = "Veltrix — децентрализованный мессенджер"
authors = ["Veltrix Team"]
edition = "2021"

[lib]
name = "veltrix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "veltrix"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
