[package]
name = "vibrora"
version = "0.1.0"
description = "Vibrora — децентрализованный мессенджер"
authors = ["Vibrora Team"]
edition = "2021"

[lib]
name = "vibrora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vibrora"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
